nginx/service-nginx.yaml
# https://kubernetes.io/ko/docs/concepts/services-networking/connect-applications-service/
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
